Fix project page layout on Safari.

--- a/sagan-client/src/css/project.css
+++ b/sagan-client/src/css/project.css
@@ -381,3 +381,8 @@
 .compass .tab-content .compass-section > .row {
     margin-top: 2rem;
 }
+
+/* Fix layout for Safari */
+.compass .row:before, .compass .row:after {
+    display: initial;
+}
